<resources>
    <!--Translatable Strings-->
    <string name="app_name">Github App</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="languange">Languange</string>
    <string name="favorite">Favorite</string>
    <string name="search_hint">Search Username</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="logo_github">Logo Github</string>
    <string name="link_github">github.com/hanifalfaqih</string>
    <string name="settings">Settings</string>
    <string name="company">Company</string>
    <string name="default_text_location">Location not available</string>
    <string name="default_text_company">Company not available</string>
    <string name="insert_user_success">User successfully added to favorites</string>
    <string name="delete_user_success">User successfully deleted from favorites</string>i
    <string name="default_text_bio">Bio not available</string>
    <string name="alarm_manager">Reminder</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="reminder_title">Reminder</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_title_text">Reminder at 09.00 AM</string>
    <string name="alarm_on">Alarm has been enabled</string>
    <string name="alarm_off">Alarm has been disabled</string>
    <string name="message">Let\'s find your project partner!</string>
    <string name="throw_content_provider">Not yet implemented</string>

    <string name="empty_text">Data not available</string>

    <!--Non Translatable Strings-->
    <string name="appwidget_text" translatable="false">User Favorite Widget</string>
</resources>