<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/favorite_user"
        android:icon="@drawable/ic_baseline_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/change_language"
                android:title="@string/languange"
                android:icon="@drawable/ic_baseline_language"
                app:showAsAction="never"/>
            <item
                android:id="@+id/alarm_manager"
                android:title="@string/alarm_manager"
                android:icon="@drawable/ic_baseline_alarm"
                app:showAsAction="never"/>

        </menu>
    </item>
</menu>